enable_testing()

find_package(GTest "1.11.0" REQUIRED COMPONENTS GTest PATHS ${CMAKE_PREFIX_PATH} NO_DEFAULT_PATH)
find_package(Python 3.8 QUIET COMPONENTS Interpreter Development.Module)
if(Python_FOUND)
    find_package(nanobind CONFIG QUIET PATHS ${CMAKE_PREFIX_PATH})
endif()

# Helper function to create and register a test executable
function(add_gtest test_name source_file)
    add_executable(${test_name} ${source_file} main.cpp)
    target_link_libraries(${test_name} PRIVATE tyr::core TBB::tbb GTest::gtest)
    add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

file(GLOB_RECURSE TYR_COMMON_PUBLIC_HEADERS CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/include/tyr/common/*.hpp")
set(TYR_COMMON_SELF_CONTAINMENT_TARGETS)
set(TYR_COMMON_SELF_CONTAINMENT_DIR "${CMAKE_CURRENT_BINARY_DIR}/common/self_contained")
file(MAKE_DIRECTORY "${TYR_COMMON_SELF_CONTAINMENT_DIR}")

foreach(header IN LISTS TYR_COMMON_PUBLIC_HEADERS)
    file(RELATIVE_PATH header_include "${PROJECT_SOURCE_DIR}/include" "${header}")
    string(REPLACE "/" "_" header_stem "${header_include}")
    string(REPLACE "." "_" header_stem "${header_stem}")
    set(source "${TYR_COMMON_SELF_CONTAINMENT_DIR}/${header_stem}.cpp")
    set(target "common_self_contained_${header_stem}")

    file(WRITE "${source}" "#include <${header_include}>\nint main() { return 0; }\n")
    add_library(${target} OBJECT "${source}")
    target_link_libraries(${target} PRIVATE tyr::core TBB::tbb)
    if(header_include MATCHES "^tyr/common/python/" AND nanobind_FOUND)
        target_include_directories(${target} PRIVATE ${Python_INCLUDE_DIRS} ${NB_DIR}/include)
    endif()
    list(APPEND TYR_COMMON_SELF_CONTAINMENT_TARGETS ${target})
endforeach()

add_custom_target(common_self_contained_headers DEPENDS ${TYR_COMMON_SELF_CONTAINMENT_TARGETS})

# Add each test source file as a separate test executable

add_gtest(common_core                                    "common/core.cpp")
add_gtest(common_associative_containers                  "common/associative_containers.cpp")
add_gtest(common_concepts                                "common/concepts.cpp")
add_gtest(common_closed_interval                         "common/closed_interval.cpp")
add_gtest(common_containers                              "common/containers.cpp")
add_gtest(common_adapters                                "common/adapters.cpp")
add_gtest(common_project_adapters                        "common/project_adapters.cpp")
add_gtest(common_repository_types                        "common/repository_types.cpp")
add_gtest(common_common                                  "common/common.cpp")
add_gtest(common_bit_packed_array_pool                   "common/bit_packed_array_pool.cpp")
add_gtest(common_bit_packed_array_set                    "common/bit_packed_array_set.cpp")
add_gtest(common_indexed_hash_set                        "common/indexed_hash_set.cpp")
add_gtest(common_block_array_set                         "common/block_array_set.cpp")
add_gtest(common_vector                                  "common/vector.cpp")
add_gtest(common_dynamic_bitset                          "common/dynamic_bitset.cpp")
add_gtest(common_hash                                    "common/hash.cpp")
add_gtest(common_equal_to                                "common/equal_to.cpp")
add_gtest(common_comparators                             "common/comparators.cpp")
add_gtest(common_canonicalization                       "common/canonicalization.cpp")
add_gtest(common_formatter                              "common/formatter.cpp")
add_gtest(common_json                                    "common/json.cpp")
add_gtest(common_json_loader                             "common/json_loader.cpp")
add_gtest(common_path                                    "common/path.cpp")
add_gtest(common_project_path                            "common/project_path.cpp")
add_gtest(common_json_suite                              "common/json_suite.cpp")
add_gtest(common_raw_array_pool                          "common/raw_array_pool.cpp")
add_gtest(common_raw_array_set                           "common/raw_array_set.cpp")
add_gtest(common_raw_vector_pool                         "common/raw_vector_pool.cpp")
add_gtest(common_raw_vector_set                          "common/raw_vector_set.cpp")
add_gtest(common_segmented_vector                        "common/segmented_vector.cpp")
add_gtest(common_unique_object_pool                       "common/unique_object_pool.cpp")
add_gtest(common_shared_object_pool                       "common/shared_object_pool.cpp")
target_link_libraries(common_json PRIVATE Boost::json)
target_link_libraries(common_json_loader PRIVATE Boost::json)
target_link_libraries(common_json_suite PRIVATE Boost::json)

add_gtest(buffer_indexed_hash_set                        "buffer/indexed_hash_set.cpp")

add_gtest(formalism_planning_invariants_synthesis        "formalism/planning/invariants/synthesis.cpp")
target_link_libraries(formalism_planning_invariants_synthesis PRIVATE Boost::json)
add_gtest(formalism_planning_parser_symbol_index_stability "formalism/planning/parser_symbol_index_stability.cpp")
target_link_libraries(formalism_planning_parser_symbol_index_stability PRIVATE Boost::json)
add_gtest(formalism_builder                              "formalism/builder.cpp")
add_gtest(formalism_repository                           "formalism/repository.cpp")
add_gtest(formalism_view                                 "formalism/view.cpp")
add_gtest(formalism_index                                "formalism/index.cpp")
add_gtest(formalism_unification                          "formalism/unification.cpp")

add_gtest(planning_lifted_task                           "planning/lifted_task.cpp")
target_link_libraries(planning_lifted_task PRIVATE Boost::json)
add_gtest(planning_ground_task                           "planning/ground_task.cpp")
target_link_libraries(planning_ground_task PRIVATE Boost::json)
add_gtest(planning_ground_vs_lifted                      "planning/algorithms/ground_vs_lifted.cpp")
target_link_libraries(planning_ground_vs_lifted PRIVATE Boost::json)
add_gtest(planning_brfs_vs_astar                        "planning/algorithms/brfs_vs_astar.cpp")
target_link_libraries(planning_brfs_vs_astar PRIVATE Boost::json)
add_gtest(planning_iw                                    "planning/algorithms/iw.cpp")
target_link_libraries(planning_iw PRIVATE Boost::json)
add_gtest(planning_iw_novelty_table                      "planning/algorithms/iw/novelty_table.cpp")
add_gtest(planning_serialized                            "planning/algorithms/serialized.cpp")
target_link_libraries(planning_serialized PRIVATE Boost::json)
add_gtest(planning_siw                                   "planning/algorithms/siw.cpp")
target_link_libraries(planning_siw PRIVATE Boost::json)
